# RayTracer-From-Scratch

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  camera.py  cornell_box.py  cube.py  geometry.py  light.py  main.py  material.py  plane.py  pybindRaytracer.cc  ray.cpp  ray.h  ray.py  raytracer.cc  raytracer.cpp  rectangle.py  renderer.cpp  renderer.h  renderer.py  scene.h  scene.py  sphere.py  spherePlot.py  test  test.cpp  test.py  utilities.py  vector.cpp  vector.h  vector.py
Python/: light.py  main.py  ray.py  scene.py  vector.py
Python/materials/: __init__.py
Python/shapes/: cube.py  rectangle.py  shape.py
materials/: diffuse.cpp  diffuse.h  diffuse.py  emissive.cpp  emissive.h  emissive.py  glass.cpp  glass.h  glass.py  material.cpp  material.h  material.py  metal.cpp  metal.h  metal.py
shapes/: __init__.py  cube.cpp  cube.h  cube.py  disc.cpp  disc.h  plane.cpp  plane.h  plane.py  rectangle.cpp  rectangle.h  rectangle.py  shape.h  shape.py  shapes.py  sphere.cpp  sphere.h  sphere.py
